--- a/Opflix - Html/assets/css/stylesheet.css
+++ b/Opflix - Html/assets/css/stylesheet.css
@@ -6,27 +6,38 @@
 body{
     height: 100vh;
     width: 100vw;
+    background-color: rgb(33,31,31);
 }
 main{
-    z-index: 2;
-    background-image: url('../img/rambo__background.svg');
-    background-repeat: space;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
 }
-#intro_opflix{
+nav{
+    display: flex;    
+    width: 100%; 
+    height: 15%;
+    align-items: center;
+    align-content: center;
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(33,31,31,1) 100%);
+    justify-content: space-between;
+}
+ul{
+    list-style-type: none;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center
+    align-content: center;
+    justify-content: space-around;
 }
-.nav_opflix{
-    z-index: 1;
-    background: rgb(0,0,0);
-background: linear-gradient(180deg, rgba(0,0,0,1) 31%, rgba(19,19,27,1) 61%, rgba(19,19,27,0.3449754901960784) 100%);
+a{
+    text-decoration: none;
+    color: aliceblue;
 }
 .font_opflix{
-    font-size: 2em;
-    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-size: 1.17em;
+    font-family: 'Lato','Roboto', 'Arial', sans-serif;
     color: aliceblue;
 }
